--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ img {
 }
 
 .container {
-  width: 100%;
+  max-width: 100%;
   padding-left: 16px;
   padding-right: 16px;
 }
@@ -74,6 +74,8 @@ img {
 @media screen and (min-width: 1158px) {
   .container {
     width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 
@@ -154,6 +156,7 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 100%;
   padding-top: 80px;
   padding-left: 40px;
   padding-right: 35px;
@@ -213,6 +216,7 @@ img {
   display: flex;
   flex-direction: column;
   gap: 40px;
+  margin-bottom: 48px;
 }
 
 .mobile-menu-tel {
@@ -234,17 +238,11 @@ img {
   color: var(--slate-color);
 }
 
-.footer-link {
-  display: inline-block;
-  margin-bottom: 16px;
-  margin-right: 0;
-}
-
 .mobile-media {
-  display: block;
-  margin-right: 80px;
+  display: flex;
+  flex-direction: column;
 }
-.footer-social-list-link {
+.mobile-social-list-link {
   display: flex;
   width: 100%;
   height: 100%;
@@ -254,17 +252,136 @@ img {
   justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-social-list-link:hover,
-.footer-social-list-link:focus {
+.mobile-social-list-link:hover,
+.mobile-social-list-link:focus {
   background-color: var(--green-color);
 }
-.footer-social-list {
+.mobile-social-list {
   display: flex;
-  gap: 16px;
+  /* width: calc((100% - 168px) / 4); */
+  gap: 56px;
 }
-.footer-social-list-item {
+.mobile-social-list-item {
   width: 40px;
   height: 40px;
+}
+
+.page-header {
+  border-bottom: 1px solid var(--corn-flower-color);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+/* HEADER for TABLET */
+
+@media screen and (min-width: 768px) {
+  .menu {
+    display: flex;
+  }
+
+  .header-tel-mail {
+    display: flex;
+  }
+
+  .mobile-menu-open-btn {
+    display: none;
+  }
+
+  .nav-header-container {
+    display: flex;
+  }
+
+  /* .page-header-container {
+    display: flex;
+  } */
+
+  .logo {
+    margin-right: 120px;
+  }
+
+  .list-header-container {
+    gap: 40px;
+  }
+
+  .menu-item {
+    display: block;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .menu-item:hover,
+  .menu-item:focus {
+    color: var(--ocean-color);
+  }
+  .tel-mail-header {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+
+  .header-tel-mail {
+    font-style: normal;
+    margin-left: auto;
+  }
+
+  .address-link {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: var(--slate-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .address-link:hover,
+  .address-link:focus {
+    color: var(--ocean-color);
+  }
+
+  .current-page {
+    color: var(--ocean-color);
+  }
+
+  .current-page {
+    position: relative;
+    display: block;
+    color: var(--ocean-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .current-page::after,
+  .current-page::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background: var(--ocean-color);
+    border-radius: 2px;
+    transform: translate(0%, 0%);
+    bottom: -1px;
+  }
+}
+
+/* HEADER for DESKTOP */
+
+@media screen and (min-width: 1158px) {
+  .address-link {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+
+  .tel-mail-header {
+    flex-direction: row;
+    gap: 40px;
+  }
+
+  .page-header-container {
+    justify-content: space-between;
+  }
 }
 
 /* 
@@ -291,40 +408,10 @@ img {
   color: var(--cloud-color);
 }
 
-.menu-item {
-  display: block;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--accent-color);
-  padding: 24px 0;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.current-page {
-  position: relative;
-  display: block;
-  color: var(--ocean-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.current-page::after,
-.current-page::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  background: var(--ocean-color);
-  border-radius: 2px;
-  transform: translate(0%, 0%);
-  bottom: -1px;
-}
 
-.menu-item:hover,
-.menu-item:focus {
-  color: var(--ocean-color);
-}
+
+
 
 .page-nav {
   align-items: center;
@@ -341,44 +428,50 @@ img {
 
 /* ADDRESS */
 
-/* .address-link {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--slate-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+/* 
 
 /* після натискання */
-/* .address-link:hover,
-.address-link:focus {
-  color: var(--ocean-color);
-} */
+/*  */
 
-/* .header-tel-mail {
-  font-style: normal;
-  margin-left: auto;
-}
+/* 
 
-.tel-mail-header {
-  display: flex;
-  gap: 40px;
-} */
+ */
 
 /* border для header(а)  */
 
-/* .page-header {
-  border-bottom: 1px solid var(--corn-flower-color);
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-} */
-*/
+/*  */
 
-/* HERO */
+/* HERO mobile */
 
 .section-hero {
+  background-color: var(--accent-color);
+  padding-top: 112px;
+  padding-bottom: 112px;
+  margin: auto;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url('../images/people-office.jpg');
+  max-width: 767px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.hero-tittle {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: var(--bodycolor);
+  text-align: center;
+  max-width: 320px;
+  display: block;
+  margin: auto;
+}
+
+/* .section-hero {
   background-color: var(--accent-color);
   padding-top: 188px;
   padding-bottom: 188px;
@@ -388,17 +481,17 @@ img {
       rgba(46, 47, 66, 0.7)
     ),
     url('../images/people-office.jpg');
-  max-width: 1440px;
+  max-width: 757px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-}
+} */
 
 .section-hero-container {
   display: block;
 }
 
-.hero-tittle {
+/* .hero-tittle {
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
@@ -408,7 +501,7 @@ img {
   max-width: 496px;
   display: block;
   margin: auto;
-}
+} */
 
 .modal-open-btn {
   font-family: Roboto, sans-serif;
