--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,10 @@ img {
   color: var(--accent-color);
 }
 
+.logo-studio-theme-dark {
+  color: var(--cloud-color);
+}
+
 /* МОБІЛЬНЕ МЕНЮ */
 
 .mobile-menu-open-btn {
@@ -551,54 +555,58 @@ img {
     row-gap: 72px;
     column-gap: 24px;
   }
+
+  .li-header {
+    text-align: start;
+  }
+
   .features-list-item {
-    /* display: flex; */
     width: calc((100% - 24px) / 2);
   }
 }
 
-/* .features-list-item {
-  width: 100%;
-} */
+@media screen and (min-width: 1158px) {
+  .features-section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
 
-/* .li-header {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: var(--accent-color);
-  margin-bottom: 8px;
-  text-align: center;
-} */
+  .features-list-item-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 112px;
+    background: var(--cloud-color);
+    border-radius: 4px;
+    margin-bottom: 8px;
+  }
 
-/* .paragraf-description {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--slate-color);
-} */
+  .list-container {
+    flex-wrap: nowrap;
+    gap: 24px;
+  }
 
-/* .features-section {
-  padding-top: 120px;
-  padding-bottom: 120px;
-  padding-left: 0px;
-  padding-right: 0px;
-} */
+  .features-list-item {
+    width: calc((100% - 72px) / 4);
+  }
 
-/* .features-list-item {
-  width: calc((100%-72px) / 4);
-}  */
+  .features-section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
 
-/* .features-list-item-icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 112px;
-  background: var(--cloud-color);
-  border-radius: 4px;
-  margin-bottom: 8px;
-} */
+  .li-header {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+  }
+
+  .paragraf-description {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+  }
+}
 
 /* SECTION 3 */
 
@@ -606,27 +614,38 @@ img {
   display: none;
 }
 
-/* .main-page-fotos {
-  padding-bottom: 120px;
+@media screen and (min-width: 1158px) {
+  .main-page-fotos {
+    display: block;
+    padding-bottom: 120px;
+  }
+
+  .fotos-list-container {
+    display: flex;
+    gap: 24px;
+  }
+
+  .section-foto-name {
+    margin-bottom: 72px;
+  }
+  .foto-list {
+    width: calc((100% - 48px) / 3);
+  }
+
+  .main-page-container {
+    display: block;
+  }
 }
 
-.fotos-list-container {
+/* section 4  Our team*/
+
+.section-team-container {
   display: flex;
-  gap: 24px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 72px;
 }
-
-.section-foto-name {
-  margin-bottom: 72px;
-}
-.foto-list {
-  width: calc((100% - 48px) / 3);
-}
-
-.main-page-container {
-  display: block;
-} */
-
-/* section 4 */
 
 .section-name {
   font-weight: 700;
@@ -641,21 +660,15 @@ img {
 
 .section-team {
   background-color: var(--cloud-color);
-  padding: 120px 0;
+  padding: 96px 0;
 }
 
 .section-list-item {
-  width: calc((100% - 72px) / 4);
+  /* width: calc((100% - 72px) / 4); */
   background-color: var(--bodycolor);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
-}
-
-.section-team-container {
-  display: flex;
-  width: 1128px;
-  gap: 24px;
 }
 
 .our-team-descr {
@@ -713,15 +726,92 @@ img {
   margin: auto;
 }
 
+@media screen and (min-width: 768px) {
+  .section-team-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 64px;
+    column-gap: 24px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .section-team {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+
+  .section-team-container {
+    flex-wrap: nowrap;
+    gap: 24px;
+  }
+}
+
 /* SECTION 5 */
 
 .section-customers {
-  padding: 120px 0;
+  padding: 96px 0;
 }
+
+.customers-list {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 16px;
+  row-gap: 72px;
+}
+
 .customers-list-item {
-  width: calc((100% - 120px) / 6);
+  width: calc((100% - 16px) / 2);
   height: 88px;
 }
+
+.customers-item-logo {
+  fill: currentColor;
+}
+.customers-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border: 1px solid var(--light-slate-color);
+  border-radius: 4px;
+  color: var(--light-slate-color);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.customers-item:hover,
+.customers-item:focus {
+  border: 1px solid var(--ocean-color);
+  color: var(--ocean-color);
+}
+
+@media screen and (min-width: 768px) {
+  .customers-list {
+    column-gap: 24px;
+  }
+
+  .customers-list-item {
+    width: calc((100% - 48px) / 3);
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .section-customers {
+    padding: 120px 0;
+  }
+
+  .customers-list {
+    flex-wrap: nowrap;
+    gap: 24px;
+  }
+
+  .customers-list-item {
+    width: calc((100% - 120px) / 6);
+  }
+}
+/* 
 
 .customers-item-logo {
   fill: currentColor;
@@ -748,11 +838,148 @@ img {
 .customers-list {
   display: flex;
   gap: 24px;
-}
+} */
 
 /*---------- FOOTER -------------*/
 
 .main-footer {
+  background-color: var(--accent-color);
+  padding: 96px 0;
+}
+.main-footer-container {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center;
+  justify-content: center; */
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 72px;
+}
+
+.footer-media {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 72px;
+}
+
+.footer-text {
+  color: var(--cloud-color);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  width: 268px;
+}
+
+.footer-media-text {
+  color: var(--bodycolor);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+
+.footer-link {
+  display: inline-block;
+  margin-bottom: 16px;
+  margin-right: 0;
+}
+
+.footer-social-list {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-social-list-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: var(--color);
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-social-list-link:hover,
+.footer-social-list-link:focus {
+  background-color: var(--green-color);
+}
+
+.footer-social-list-item {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-subscribe-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.footer-subscribe {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.footer-subscribe-label {
+  width: 100%;
+  /* margin-right: 24px; */
+}
+.email-input {
+  background-color: transparent;
+  border: 1px solid #ffffff;
+  border-radius: 4px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  width: 100%;
+  height: 40px;
+  outline: none;
+  color: var(--bodycolor);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+}
+
+.email-input::placeholder {
+  color: var(--bodycolor);
+}
+
+.footer-subscribe-btn {
+  display: flex;
+  background-color: var(--color);
+  justify-content: center;
+  align-items: center;
+  padding: 8px 24px;
+  border-radius: 4px;
+  color: var(--bodycolor);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  min-width: 165px;
+  height: 40px;
+  outline: none;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-btn-icon {
+  margin-left: 16px;
+}
+
+.footer-subscribe-btn:hover,
+.footer-subscribe-btn:focus {
+  background-color: var(--ocean-color);
+}
+
+/* .main-footer {
   background-color: var(--accent-color);
   padding: 100px 0;
 }
@@ -870,7 +1097,7 @@ img {
 .footer-subscribe-btn:hover,
 .footer-subscribe-btn:focus {
   background-color: var(--ocean-color);
-}
+} */
 
 /*---------- ПОРТФОЛІО КНОПКИ--------- */
 
