--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,14 @@ img {
   }
 }
 
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+  .section-team > .container,
+  .section-customers > .container,
+  .main-footer > .container {
+    width: 584px;
+  }
+}
+
 /* 
 .container {
   max-width: 1158px;
@@ -135,7 +143,8 @@ img {
 
 @media screen and (min-width: 768px) {
   .page-header-container {
-    padding: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
   }
 
   .menu {
@@ -781,7 +790,6 @@ img {
     flex-wrap: wrap;
     row-gap: 64px;
     column-gap: 24px;
-    /* max-width: 552px; */
     margin-left: auto;
     margin-right: auto;
   }
@@ -840,12 +848,6 @@ img {
   color: var(--ocean-color);
 }
 
-@media screen and (min-width: 768px) and (max-width: 1157px) {
-  .customers-container {
-    width: 552px;
-  }
-}
-
 @media screen and (min-width: 768px) {
   .customers-list {
     column-gap: 24px;
@@ -881,10 +883,6 @@ img {
 .main-footer-container {
   display: flex;
   flex-direction: column;
-  max-width: 552px;
-
-  /* align-items: center;
-  justify-content: center; */
 }
 
 .footer-container {
@@ -957,11 +955,6 @@ img {
   width: 40px;
   height: 40px;
 }
-
-/* .footer-subscribe-container {
-  /* display: flex;
-  flex-direction: column;
-  align-items: center; */
 
 .footer-subscribe {
   display: flex;
